# grpc-deliver

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  grpc-deliver.schema.json  postinst
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/smtpd/src/config/: smtpd-app.yaml  smtpd.yaml
.devcontainer/smtpd/src/hooks/queue/: predelivery.hsl
proto/: rfc822.proto
src/: config.rs  deliver.rs  grpc-deliver.rs  grpc-server.rs  utils.rs
